# master_thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/processed/CWatM_data/: chanleng_regions.csv  outputs_land.parquet  variable_group_dict.json
data/processed/bivariate_metrics/CWatM/: measures_chanleng_1.csv  measures_chanleng_2.csv  measures_chanleng_3.csv  measures_chanleng_4.csv  measures_dry cold.csv  measures_dry warm.csv  measures_global.csv  measures_wet cold.csv  measures_wet warm.csv
data/processed/bivariate_metrics/CWatM/shuffled/: measures_dry cold-0.csv  measures_dry cold-1.csv  measures_dry cold-10.csv  measures_dry cold-11.csv  measures_dry cold-12.csv  measures_dry cold-13.csv  measures_dry cold-14.csv  measures_dry cold-15.csv  measures_dry cold-16.csv  measures_dry cold-17.csv  measures_dry cold-18.csv  measures_dry cold-19.csv  measures_dry cold-2.csv  (+112 more)
data/processed/bivariate_metrics/pcr-globwb/: scores_all.csv
docs/: conf.py
notebooks/: 01-explore_gnann_data.ipynb  02-generate_toy_data.ipynb  03-compute_metrics_toy_data.ipynb  04-compute_metrics_gnann_data.ipynb  05-Lea-CWatM_data_processing.ipynb  05-explore_cwatm_data.ipynb  06-CWatM_input_data_processing.ipynb  07-CWatM_output_data_processing.ipynb  07-CWatM_output_processing.ipynb  08-CWatM_mask_land_and_explore_data.ipynb  08-explore_cwatm_data.ipynb  09-CWatM_compute_measures.ipynb  09-compute_metrics_CWatM_data.ipynb  10-CWatM_analyse_measures.ipynb  11-CWatM_explore_chanlen.ipynb  11-CWatM_explore_chanleng.ipynb  20-divisive_clustering.ipynb
notebooks/R_experiments/: sspca.Rmd  sspca.html
scripts/: 09-CWatM_compute_measures_global.py  09-CWatM_compute_measures_regions.py
src/data/: cwatm_data.py  gnann_data.py  make_toy_data.py  utils.py
src/dependence_measures/: bivariate.py  compare.py  mutual_information.py  sspca.R
src/features/: gnann_features.py
src/models/: divisive_clustering.py
src/visualization/: visualize.py
(+23 files in other folders)
