[tool.poetry]
name = "master-thesis"
package-mode = false
version = "0.1.0"
description = "Repository for compiling all relevant code and data for my MSc thesis"
authors = ["Max Serra Lasierra <mserralasierra@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
