[tool.poetry]
name = "master-thesis"
package-mode = false
version = "0.1.0"
description = "Repository for compiling all relevant code and data for my MSc thesis"
authors = ["Max Serra Lasierra <mserralasierra@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.2.2"
jupyterlab = "^4.1.6"
scikit-learn = "^1.4.2"
plotly = "^5.21.0"
xarray = {extras = ["complete"], version = "^2024.3.0"}
netcdf4 = "^1.6.5"
h5netcdf = "^1.3.0"
scipy = "^1.13.0"
cftime = "^1.6.3"
tqdm = "^4.66.4"
ipywidgets = "^8.1.2"
matplotlib = "^3.8.4"
cartopy = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
