[tool.poetry]
name = "master-thesis"
package-mode = false
version = "0.1.0"
description = "Repository for compiling all relevant code and data for my MSc thesis"
authors = ["Max Serra Lasierra <mserralasierra@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "2.2.2"
jupyterlab = "4.2.0"
scikit-learn = "1.4.2"
plotly = "5.22.0"
scipy = "1.13.0"
xarray = "2024.5.0"
cftime = "1.6.3"
tqdm = "4.66.4"
ipywidgets = "8.1.2"
matplotlib = "3.8.4"
cartopy = "0.23.0"
minepy = "1.2.6"
dataframe-image = "0.2.4"
numpy = "1.26.4"
pyarrow = "17.0.0"
isimip-client = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
